fix, adjust revenant entry

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -30,8 +30,8 @@ reroll {
         es_cooldown @p reset
         es_endurance @p reset
         gamestage silentadd @p nether
-        gamestage silentadd @p preWarden
-        gamestage silentremove @p killedWarden
+        gamestage silentadd @p preOracle
+        gamestage silentremove @p killedOracle
         gamestage silentremove @p killedWither
         gamestage silentremove @p erebus
         gamestage silentremove @p deepdark
