infernium progression rework
- mining infernium grants raw unstable infernium (holding sets player on fire)
- unstable infernium cant be smelted
- infernal beings sometimes drop raw unstable infenrium
- combine unstable infernium with ashen catalyst to create stable infernium
- catalyst is dropped when using echo of betrayal on ancient infernal brick
- catalyst is only dropped AFTER oracle death

- oracle no longer targets revenants

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -92,7 +92,6 @@ definitions {
         mysticstaffs:heal_staff
         contenttweaker:deviled_egg_sandwich
         %Infernium Ingot
-        %Raw Infernium
         %Infernium Ore
         %Infernium Sword
         %Infernium Pickaxe
@@ -142,6 +141,10 @@ definitions {
 
     #  [default: ]
     S:level10_entries <
+        dynaores:raw_pyridium
+        %Raw Unstable Infernium
+        %Unstable Infernium Ore
+        %Ashen Catalyst
         @da
         contenttweaker:vitality_orb
         %Alpha
