--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -864,6 +864,8 @@ targetblocker {
         wither;*
         *;wither
         da:nether_aberant;da:nether_aberant
+        da:nether_aberant;da:nether_pyre
+        da:nether_pyre;da:nether_aberant
      >
 }
 
