--- a/config/champions.cfg
+++ b/config/champions.cfg
@@ -67,6 +67,7 @@ general {
         betterswim:herobrine
         dimdoors:mob_monolith
         weeping-angels:weepingangel
+        minecraft:magma_cube
      >
 
     # Set whether the mob configuration is blacklisted or whitelisted
