--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -28,8 +28,11 @@ ui_background {
     seenscreens {
         B:baubles.client.gui.GuiPlayerExpanded=true
         B:com.gendeathrow.mputils.client.gui.Gui_QuickMenu=true
+        B:com.legacy.nethercraft.client.gui.GuiNetherCrafting=true
         B:"de.keksuccino.fancymenu.menu.fancy.guicreator.CustomGuiLoader$1"=true
+        B:de.keksuccino.fancymenu.menu.fancy.helper.ui.FMConfigScreen=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
+        B:me.jonathing.minecraft.packupdater.client.UpdateGUI=true
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
         B:us.getfluxed.controlsearch.client.gui.GuiNewControls=true
     }
@@ -62,6 +65,7 @@ ui_movement {
     seenscreens {
         B:baubles.client.gui.GuiPlayerExpanded=true
         B:com.gendeathrow.mputils.client.gui.Gui_QuickMenu=true
+        B:com.legacy.nethercraft.client.gui.GuiNetherCrafting=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
     }
 
