--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -103,6 +103,7 @@ definitions {
         %Ghast
         da:ambition_flame
         da:ambition_sword
+        da:fire_stone_lit
      >
 
     #  [default: ]
