--- a/config/xporbclump.cfg
+++ b/config/xporbclump.cfg
@@ -7,7 +7,7 @@ general {
         D:areaSize=4.0
 
         # Changes orbs size based on the amount of experience it holds
-        B:changeOrbSize=false
+        B:changeOrbSize=true
 
         # Enable xp orb clumping
         B:enable=true
@@ -58,6 +58,18 @@ general {
         # Min: 0.0
         # Max: 1.7976931348623157E308
         D:maxDistance=0.0
+    }
+
+    terotationfix {
+        # Fix some modded tile entities losing their data when rotated by wrenches
+        # Fixes tile entities from: Barrels, Drums, Storage & More, Traveler's Backpack
+        B:"Fix Tile Entity Rotation"=false
+
+        # Additional classes of tile entities that are not on the list for people that know how this thing works.
+        # Be sure to start a new issue on this mods GitHub page if you find a tile entity that suffers from this issue.
+        # Example: com.tiviacz.travelersbackpack.tileentity.TileEntityTravelersBackpack
+        S:"Rotation Glitch Fix Target Classes" <
+         >
     }
 
 }
