spiders 2.0 fork, fixes issues

--- a/config/spiders-2.0.cfg
+++ b/config/spiders-2.0.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 general {
+    # Chance at which spider spawning in a light area (>7) will be allowed. '0' completely disables spider spawning in the light. In the original mod, a huge number of spiders spawned during the daytime all over the world, but this is not normal for a hostile mob.
+    I:bright_spawning_chance=0
+
     # Whether the path finder debug preview should be enabled.
     B:path_finder_debug_preview=false
 
