--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -21,6 +21,8 @@ compat {
 reroll {
     # You can use most valid commands. '@p' will replace wil the player's name. You can also use format strings. Examples: 'say hello world', 'advancement revoke @p everything', 'say hello %s, you are %s!;playername;amazing' [default: [advancement revoke @p everything]]
     S:"Additional Commands" <
+        fmvariable set timesup false false
+        sanity set @p 100
         deathscrollclear @p
         gamemode survival @p
         advancement revoke @p everything
