--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -94,7 +94,7 @@ general {
             
             FullInfernalArmorBonus, [Fire Immunity] [Strength 1] [Increased AOE of Blade of the Last Vigil], 1, FullInfernalArmor
             
-            FullVeilArmorBonus, [Cure all effects every 15s], 1, FullVeilArmor
+            FullVeilArmorBonus, [Cure all effects every 15s] [Passive Sanity Regen], 1, FullVeilArmor
             
             VeilSwordsBonus, [+1 Attack Dmg], 1, VeilSwords
          >
