fix bauble drops

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -44,6 +44,8 @@ reroll {
         gamestage silentremove @p veilstrium_entry
         gamestage silentremove @p infernium_entry
         gamestage silentremove @p glowood_entry
+        gamestage silentremove @p balloon
+        gamestage silentremove @p flame_pendant
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
