--- a/config/sanity.cfg
+++ b/config/sanity.cfg
@@ -124,6 +124,9 @@ general {
     # Max: 100.0
     D:Rain=0.0
 
+    # Whether to reset sanity after respawning.
+    B:"Reset Sanity"=false
+
     # The sanity to increase when player wake up.
     # Min: 0.0
     # Max: 100.0
