Rework timer bonus. New functionality, name, logic
need new texture

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ config/acronym/saved/material_parts_contenttweaker.json
 config/acronym/saved/saved_sub_blocks_contenttweaker-original.json
 config/acronym/saved/saved_sub_blocks_contenttweaker.json
 patchouli_data.json
+config/fancymenu/user_variables.db
