roguelite update part1: chrono absolution

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -85,6 +85,7 @@ definitions {
 
     #  [default: ]
     S:level3_entries <
+        contenttweaker:chrono_absolution
         contenttweaker:infernal_core
         contenttweaker:infernal_fortress_scepter
         contenttweaker:riftbreaker_crystal
@@ -142,6 +143,7 @@ definitions {
 
     #  [default: ]
     S:level10_entries <
+        contenttweaker:unstable_sand
         dynaores:raw_pyridium
         %Raw Unstable Infernium
         %Unstable Infernium Ore
