--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -46,6 +46,9 @@ reroll {
         gamestage silentremove @p glowood_entry
         gamestage silentremove @p balloon
         gamestage silentremove @p flame_pendant
+        gamestage silentremove @p chrono_usurpation_entry
+        gamestage silentremove @p ashen_oracle_entry
+        gamestage silentremove @p unlocked_chrono_absolution
         srpevolution phase_0
 
         timer @p add 100
