The Mind's Abyss

--- a/config/MusicTriggers/example/main.toml
+++ b/config/MusicTriggers/example/main.toml
@@ -9,7 +9,7 @@
 		identifier = "overworld"
 		resource_name = [ "0" ]
 	[[triggers.dimension]]
-		identifier = "deepdark"
+		identifier = "minds_abyss"
 		resource_name = [ "10" ]
 	[[triggers.dimension]]
 		identifier = "erebus"
@@ -49,20 +49,20 @@
 		triggers = [ "dimension-overworld" ]
 	[songs.overworld_areyouinherewithus_coagmusic]
 		triggers = [ "dimension-overworld" ]
-	[songs.deepdark_eveningofchaos_kevinmacleod]
-		triggers = [ "dimension-deepdark" ]
-	[songs.deepdark_distanttension_kevinmacleod]
-		triggers = [ "dimension-deepdark" ]
-	[songs.deepdark_apprehensionkevinmacleod]
-		triggers = [ "dimension-deepdark" ]
-	[songs.deepdark_classichorror3_kevinmacleod]
-		triggers = [ "dimension-deepdark" ]
-	[songs.deepdark_childrenstheme_kevinmacleod]
-		triggers = [ "dimension-deepdark" ]
-	[songs.deepdark_anxiety_kevinmacleod]
-		triggers = [ "dimension-deepdark" "loading" ]
-	[songs.deepdark_deepnoise_kevinmacleod]
-		triggers = [ "dimension-deepdark" ]
+	[songs.minds_abyss_eveningofchaos_kevinmacleod]
+		triggers = [ "dimension-minds_abyss" ]
+	[songs.minds_abyss_distanttension_kevinmacleod]
+		triggers = [ "dimension-minds_abyss" ]
+	[songs.minds_abyss_apprehensionkevinmacleod]
+		triggers = [ "dimension-minds_abyss" ]
+	[songs.minds_abyss_classichorror3_kevinmacleod]
+		triggers = [ "dimension-minds_abyss" ]
+	[songs.minds_abyss_childrenstheme_kevinmacleod]
+		triggers = [ "dimension-minds_abyss" ]
+	[songs.minds_abyss_anxiety_kevinmacleod]
+		triggers = [ "dimension-minds_abyss" "loading" ]
+	[songs.minds_abyss_deepnoise_kevinmacleod]
+		triggers = [ "dimension-minds_abyss" ]
 	[songs.erebus_controlledchaos_kevinmacleod]
 		volume = "0.25"
 		triggers = [ "dimension-erebus" ]
