--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -35,7 +35,7 @@ reroll {
         gamestage silentremove @p killedOracle
         gamestage silentremove @p killedWither
         gamestage silentremove @p erebus
-        gamestage silentremove @p deepdark
+        gamestage silentremove @p minds_abyss
         gamestage silentremove @p surface
         gamestage silentremove @p dreadswine_entry
         gamestage silentremove @p foulite_dust_entry
