roguelite update p3: buff bosses + erebus mobs
- jade and copper no longer generate in the erebus

--- a/config/erebus.cfg
+++ b/config/erebus.cfg
@@ -37,7 +37,7 @@ general {
 "mob modifiers" {
     B:"Dragonflies Grab Players"=true
     I:"Mob Attack Damage Multipier"=1
-    I:"Mob Health Multiplier"=1
+    I:"Mob Health Multiplier"=2
     B:"Scorpions Grab Players"=true
 }
 
@@ -45,7 +45,7 @@ general {
 ores {
     B:"Generate aluminium"=false
     B:"Generate coal"=true
-    B:"Generate copper"=true
+    B:"Generate copper"=false
     B:"Generate diamond"=false
     B:"Generate diamond_encrusted"=false
     B:"Generate emerald"=false
@@ -53,7 +53,7 @@ ores {
     B:"Generate gneiss"=true
     B:"Generate gold"=false
     B:"Generate iron"=false
-    B:"Generate jade"=true
+    B:"Generate jade"=false
     B:"Generate lapis"=false
     B:"Generate lead"=false
     B:"Generate petrified_wood"=true
