Add Chrono Anchor, fixes + code improvements
Fix data reset after death
improved logic, error handling

--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -183,6 +183,8 @@ inventory {
 
     # List of items that are always kept
     S:"Essential Items" <
+        timeisup:timer_anchor
+        quark:soul_compass
         enderskills:book
         minecraft:torch
         quark:backpack
