--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -34,6 +34,7 @@ ui_background {
         B:dmillerw.menu.gui.GuiRadialMenu=true
         B:me.jonathing.minecraft.packupdater.client.UpdateGUI=true
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
+        B:net.minecraft.client.gui.GuiScreenOptionsSounds=true
         B:us.getfluxed.controlsearch.client.gui.GuiNewControls=true
     }
 
