--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -69,6 +69,7 @@ definitions {
         timeisup:timer_bonus
         quark:soul_compass
         contenttweaker:soul_anchor
+        timeisup:timer_anchor
         corpsecomplex:scroll
         %Entry
      >
