--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ config/acronym/saved/saved_sub_blocks_contenttweaker-original.json
 config/acronym/saved/saved_sub_blocks_contenttweaker.json
 patchouli_data.json
 config/fancymenu/user_variables.db
+/mods/1.12.2
