--- a/config/betterinvisibility.cfg
+++ b/config/betterinvisibility.cfg
@@ -7,6 +7,7 @@
     I:"Invisibility Radius of Effect"=100
     B:"Invisibility Removed if Discovered"=false
     B:"Invisibility Removed if Player Attacks"=false
+    B:"Mod Sounds On"=true
     B:"Player Hidden From Mobs When Invisible"=true
     B:"Show Armor and Weapons When Invisible"=false
     B:"Show Invisibility Particle Effects on Mobs"=true
