--- a/config/BOMD DA Backport/mob_config.cfg
+++ b/config/BOMD DA Backport/mob_config.cfg
@@ -215,7 +215,7 @@ general {
     B:"Void Blossom New Attacks Enable/Disalbe"=true
 
     # When enabled, the Void spikes will only spawn within 20 blocks of all players, to help reduce lag when being spawned
-    B:"Void Blossom Spikes Lag Reducer"=false
+    B:"Void Blossom Spikes Lag Reducer"=true
 
     # Change the Attack damage of the Mini Wyrks
     D:"Wyrk Attack Damage"=14.0
