--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ config/acronym/saved/saved_sub_blocks_contenttweaker.json
 patchouli_data.json
 config/fancymenu/user_variables.db
 /mods/1.12.2
+mods/ProbeZS-1.18.7.jar
+config/probezs.cfg
