--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -218,6 +218,8 @@ general {
         B:"Enable Corpse Patch"=true
         B:"Enable Crossbow(jbredwards) Patch"=true
         B:"Enable Custom Main Menu Patch"=true
+
+        # Also patches Custom NPCs Unofficial, will log harmless errors
         B:"Enable Custom NPCs Patch"=true
         B:"Enable Custom Skin Loader Patch"=true
 
@@ -252,6 +254,7 @@ general {
         B:"Enable Logistics Pipes Patch"=true
         B:"Enable MAGE (Graphical Tweaks) Patch"=true
         B:"Enable More Refined Storage Patch"=true
+        B:"Enable NBT Peripheral Patch"=true
         B:"Enable Nothirium Patch"=false
         B:"Enable OfflineSkins Patch"=true
         B:"Enable OpenModsLib Patch"=true
@@ -266,6 +269,7 @@ general {
         # It failed to patch FontRenderer for no fxxking reason.
         B:"Enable SmoothFont Patch"=true
         B:"Enable Solar Flux Reborn Patch"=true
+        B:"Enable Sound Device Options / More Sound Config Patch"=true
         B:"Enable Splash Animation Patch"=true
         B:"Enable Subaquatic Patch"=true
         B:"Enable TFC Medical Patch"=true
