--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -35,6 +35,7 @@ ui_background {
         B:me.jonathing.minecraft.packupdater.client.UpdateGUI=true
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
         B:net.minecraft.client.gui.GuiScreenOptionsSounds=true
+        B:net.optifine.shaders.gui.GuiShaders=true
         B:us.getfluxed.controlsearch.client.gui.GuiNewControls=true
     }
 
