update sanity (change sounds later)

--- a/config/sanity.cfg
+++ b/config/sanity.cfg
@@ -132,6 +132,23 @@ general {
     # Max: 100.0
     D:Sleep=0.0
 
+    # The list of sounds which will play randomly when sanity is low.
+    S:Sounds <
+        entity.creeper.primed
+        entity.tnt.primed
+        entity.skeleton.ambient
+        entity.skeleton.step
+        entity.zombie.ambient
+        entity.zombie.step
+        entity.enderman.ambient
+        entity.hostile.big_fall
+        block.chest.open
+        block.chest.close
+        block.wooden_door.open
+        block.wooden_trapdoor.open
+        entity.wolf.growl
+     >
+
     # The sanity to reduce when player's thirstLevel is low. (per 0.5s, support ToughAsNails and SimpleDifficulty)
     # Min: 0.0
     # Max: 100.0
