--- a/config/sanity.cfg
+++ b/config/sanity.cfg
@@ -6,17 +6,17 @@ general {
     # Max: 100.0
     D:Advancement=0.0
 
-    # The sanity to reduce when player attack an animal.
+    # The sanity to decrease when player attack an animal.
     # Min: 0.0
     # Max: 100.0
     D:"Attack Animal"=0.0
 
-    # The sanity to reduce when player attack another player.
+    # The sanity to decrease when player attack another player.
     # Min: 0.0
     # Max: 100.0
     D:"Attack Player"=0.0
 
-    # The sanity to reduce when player attack a villager.
+    # The sanity to decrease when player attack a villager.
     # Min: 0.0
     # Max: 100.0
     D:"Attack Villager"=0.0
@@ -30,10 +30,10 @@ general {
     I:"Brain Flash Time"=3
 
     # Offset on x of the Brain. A positive number means a shift to the right.
-    I:"Brain OffX"=-30
+    I:"Brain OffX"=0
 
     # Offset on y of the Brain. A positive number means a shift to the top.
-    I:"Brain OffY"=0
+    I:"Brain OffY"=-30
 
     # Whether to enable the brain overlay.
     B:"Brain Overlay"=true
@@ -43,48 +43,42 @@ general {
     # Max: 100.0
     D:Bred=0.0
 
-    # The sanity to reduce when player's air is low.(per 0.5s)
+    # The sanity to decrease when player's air is low.(per 0.5s)
     # Min: 0.0
     # Max: 100.0
     D:Choking=0.0
 
-    # The sanity to reduce when player get trapped in dangerous blocks or liquids. (per 0.5s)
-    # Min: 0.0
-    # Max: 100.0
-    D:Danger=0.0
-
-    # The list of dangerous blocks or liquids which will decrease sanity when player is in it.
-    S:"Dangerous Blocks" <
-        minecraft:web
-        minecraft:water
-     >
-
-    # The sanity to reduce when player is in dark. (per 0.5s)
+    # The sanity to decrease when player is in dark. (per 0.5s)
     # Min: 0.0
     # Max: 100.0
     D:Dark=0.0
 
-    # The sanity to increase when player eat healthy food.
-    # Min: 0.0
-    # Max: 100.0
-    D:Eat=0.0
+    # The list of blocks or liquids which will decrease or increase sanity when player is in it. ('block;value', per 0.5s)
+    S:Environment <
 
-    # The sanity to reduce based on the fall distance with the ratio of 1 to this number.
+     >
+
+    # The sanity to decrease based on the fall distance with the ratio of 1 to this number.
     # Min: 0.0
     # Max: 100.0
     D:Fall=0.0
+
+    # The list of food and the sanity to decrease or increase when eat it. ('food;value')
+    S:Food <
+
+     >
 
     # The sanity to increase when player wear a garland. (per 0.5s)
     # Min: 0.0
     # Max: 100.0
     D:Garland=0.0
 
-    # The sanity to reduce when player's foodLevel is low. (per 0.5s)
+    # The sanity to decrease when player's foodLevel is low. (per 0.5s)
     # Min: 0.0
     # Max: 100.0
     D:Hunger=0.0
 
-    # The sanity to reduce based on the damage with the ratio of 1 to this number.
+    # The sanity to decrease based on the damage with the ratio of 1 to this number.
     # Min: 0.0
     # Max: 100.0
     D:Hurt=0.0
@@ -94,17 +88,17 @@ general {
     # Max: 100.0
     D:"Kill Mob"=0.0
 
-    # The sanity to reduce when player is struck by lightning.
+    # The sanity to decrease when player is struck by lightning.
     # Min: 0.0
     # Max: 100.0
     D:Lightning=0.0
 
-    # The sanity to reduce when player loses pets.
+    # The sanity to decrease when player loses pets.
     # Min: 0.0
     # Max: 100.0
     D:Lost=0.0
 
-    # The sanity to reduce when mobs are around player. (per 0.5s, within 8 blocks)
+    # The sanity to decrease when mobs are around player. (per 0.5s, within 8 blocks)
     # Min: 0.0
     # Max: 100.0
     D:Mob=0.0
@@ -119,7 +113,7 @@ general {
     # Max: 100.0
     D:Quest=0.0
 
-    # The sanity to reduce when player get wet by rain. (per 0.5s)
+    # The sanity to decrease when player get wet by rain. (per 0.5s)
     # Min: 0.0
     # Max: 100.0
     D:Rain=0.0
@@ -149,31 +143,15 @@ general {
         entity.wolf.growl
      >
 
-    # The sanity to reduce when player's thirstLevel is low. (per 0.5s, support ToughAsNails and SimpleDifficulty)
+    # The sanity to decrease when player's thirstLevel is low. (per 0.5s, support ToughAsNails and SimpleDifficulty)
     # Min: 0.0
     # Max: 100.0
     D:Thirst=0.0
 
-    # The sanity to reduce when player change dimension.
+    # The sanity to decrease when player change dimension.
     # Min: 0.0
     # Max: 100.0
     D:Trip=0.0
-
-    # The list of unhealthy food and the sanity to reduce when eat it. ('food;value')
-    S:"Unhealthy Food" <
-        minecraft:rotten_flesh;0.0
-        minecraft:spider_eye;0.0
-        minecraft:chicken;0.0
-        minecraft:porkchop;0.0
-        minecraft:mutton;0.0
-        minecraft:beef;0.0
-        minecraft:rabbit;0.0
-        minecraft:poisonous_potato;0.0
-        minecraft:fish;0.0
-        minecraft:fish:1;0.0
-        minecraft:fish:2;0.0
-        minecraft:fish:3;0.0
-     >
 }
 
 
