emissive ancient infernal brick

--- a/shaderpacks/ComplementaryUnbound_r5.4 + EuphoriaPatches_1.5.2/shaders/block.properties
+++ b/shaderpacks/ComplementaryUnbound_r5.4 + EuphoriaPatches_1.5.2/shaders/block.properties
@@ -766,7 +766,7 @@ regions_unexplored:day_lily:half=upper regions_unexplored:meadow_sage:half=upper
 wilderwild:datura:half=upper wilderwild:milkweed:half=upper
 
 # Automatic glowing modded ores - Stone
-block.10024 = nethercraft:neridium_ore nethercraft:foulite_ore nethercraft:pyridium_ore nethercraft:glowood_log nethercraft:glowood_planks \
+block.10024 = nethercraft:neridium_ore nethercraft:foulite_ore nethercraft:pyridium_ore nethercraft:glowood_log nethercraft:glowood_planks da:fire_stone_lit \
 \
 cobblemon:shiny_stone_ore cobblemon:deepslate_shiny_stone_ore  \
 \
