java 23 forge/fugue cfg

--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -234,6 +234,7 @@ general {
         B:"Enable Erebus Fix Patch"=true
         B:"Enable Essential Patch"=true
         B:"Enable Extra Utilities Patch"=true
+        B:"Enable Farseek Patch"=true
 
         # This gtceu patch is temporary. An official fix is pending.
         B:"Enable GregTechCE Unofficial Patch"=true
