fermiumasm compat with cleanroom

--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -51,6 +51,8 @@ general {
     # If you got a crash says some methods/fields in LaunchClassLoader not found, that's the remapper you want.
     # As a workaround, These targets will be redirected to new API.
     S:"Launch Wrapper API Change Patching List" <
+        mirror.normalasm.NormalReflector
+        mirror.normalasm.common.crashes.ModIdentifier
         zone.rong.loliasm.common.crashes.ModIdentifier
         zone.rong.loliasm.LoliReflector
         com.charles445.rltweaker.asm.RLTweakerASM
@@ -152,6 +154,7 @@ general {
     # Add them to list could redirect their toURI() to a decent jar URL.
     # 
     S:"getCodeSource() Patching List" <
+        mirror.normalasm.common.crashes.ModIdentifier
         pm.c7.pmr.tweaker.MixinLoadingTweaker
         customskinloader.forge.platform.IFMLPlatform$FMLPlatformInitializer
         pcl.opendisks.OpenDisksUnpack
