replace AdvancementScreenshot with UT update

--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -52,6 +52,7 @@ general {
         Infernal Rods are vital for stabilizing certain crafting recipes.
         The barriers between Realms can only be shattered by specific means.
         Some memories persist between cycles, if you know where to look.
+        Screenshots are automatically taken and copied to your clipboard for major achievements.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
