--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -34,7 +34,9 @@ ui_background {
         B:dmillerw.menu.gui.GuiRadialMenu=true
         B:me.jonathing.minecraft.packupdater.client.UpdateGUI=true
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
+        B:mirror.normalasm.common.crashes.GuiInitErrorScreen=true
         B:net.minecraft.client.gui.GuiScreenOptionsSounds=true
+        B:net.optifine.gui.GuiPerformanceSettingsOF=true
         B:net.optifine.shaders.gui.GuiShaders=true
         B:us.getfluxed.controlsearch.client.gui.GuiNewControls=true
     }
