enable ao_artifacts and hide_model_exceptions in VF

--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -30,6 +30,7 @@ ui_background {
         B:com.gendeathrow.mputils.client.gui.Gui_QuickMenu=true
         B:com.legacy.nethercraft.client.gui.GuiNetherCrafting=true
         B:"de.keksuccino.fancymenu.menu.fancy.guicreator.CustomGuiLoader$1"=true
+        B:de.keksuccino.fancymenu.menu.fancy.helper.layoutcreator.PreloadedLayoutEditorScreen=true
         B:de.keksuccino.fancymenu.menu.fancy.helper.ui.FMConfigScreen=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
         B:me.jonathing.minecraft.packupdater.client.UpdateGUI=true
