--- a/config/vintagefix.properties
+++ b/config/vintagefix.properties
@@ -5,7 +5,7 @@ mixin.backports.new_world_name=true
 mixin.backports.white_button_text=true
 mixin.blockstates=true
 mixin.branding=true
-mixin.bugfix.ao_artifacts=false
+mixin.bugfix.ao_artifacts=true
 mixin.bugfix.entity_disappearing=true
 mixin.bugfix.exit_freeze=true
 mixin.bugfix.extrautils=false
@@ -16,7 +16,7 @@ mixin.chunk_access=true
 mixin.chunk_rendering=true
 mixin.dynamic_resources=false
 mixin.dynamic_resources.background_item_bake=true
-mixin.dynamic_resources.hide_model_exceptions=false
+mixin.dynamic_resources.hide_model_exceptions=true
 mixin.dynamic_structures=true
 mixin.invisible_subchunks=true
 mixin.jar_discoverer_cache=true
