--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -818,7 +818,7 @@ general {
         B:"Forge Suppress Broken Ore Dictionary Errors (Forge)"=false
 
         # Suppresses Forge's potentially dangerous prefix errors
-        B:"Forge Suppress Dangerous Prefix Errors (Forge)"=false
+        B:"Forge Suppress Dangerous Prefix Errors (Forge)"=true
 
         # Fixes ForgottenItems bound tools NBT being reset when the tool is bound
         B:"ForgottenItems Fix Binding NBT (ForgottenItems)"=false
