ashen now glow, improve texture

--- a/shaderpacks/ComplementaryUnbound_r5.4 + EuphoriaPatches_1.5.2/shaders/entity.properties
+++ b/shaderpacks/ComplementaryUnbound_r5.4 + EuphoriaPatches_1.5.2/shaders/entity.properties
@@ -201,7 +201,7 @@ entity.50016 = player
 
 entity.50020 = blaze \
 \
-primitivemobs:blazing_juggernaut burnt:fire_devil \
+primitivemobs:blazing_juggernaut da:flame_knight da:incendium_spirit da:nether_aberant burnt:fire_devil \
 \
 betternether:hydrogen_jellyfish \
 \
