replace tips with anothertips
faster tips

--- a/config/anothertips.cfg
+++ b/config/anothertips.cfg
@@ -1,11 +1,8 @@
 # Configuration file
 
 general {
-    # Determines whether or not the default tips should be possible. This includes tips added directly by other mods through their language files. [default: true]
-    B:allowDefaultTips=false
-
-    # A list of custom tips added by the user or modpack. [default: ]
-    S:customTips <
+    # This is the pool of tips that will be displayed during the world loading screen [default: ]
+    S:"Tip Lang Keys" <
         Press R on an item to view its recipes and U to view its uses.
         Press R/U on items to reveal their hidden potential through recipes and uses
         Item tooltips & lore text provide vital clues to the progression.
@@ -55,17 +52,11 @@ general {
         Screenshots are automatically taken and copied to your clipboard for major achievements.
      >
 
-    # The color of the actual tip text. [default: FFFFFF]
-    S:textColor=FFFFFF
-
-    # The color of the top/title text for the tip. [default: FFFF55]
-    S:titleColor=FF0000
-
-    # The amount of offset the tip text should have from the left of the screen. [range: 0 ~ 2147483647, default: 5]
-    I:xOffset=5
-
-    # The amount of offset the tip text should have from the bottom of the screen. [range: 0 ~ 2147483647, default: 40]
-    I:yOffset=40
+    # This is a map that determines the wait time for tips in different languages
+    # For example, en_us:0.1 refers to "wait 0.1s for each character for tips in English" [default: [en_us:0.1]]
+    S:"Tip Wait Time" <
+        en_us:0.1
+     >
 }
 
 
