--- a/config/anothertips.cfg
+++ b/config/anothertips.cfg
@@ -50,6 +50,7 @@ general {
         The barriers between Realms can only be shattered by specific means.
         Some memories persist between cycles, if you know where to look.
         Screenshots are automatically taken and copied to your clipboard for major achievements.
+        Ensure your volume is on, audio is crucial. Headphones recommended.
      >
 
     # This is a map that determines the wait time for tips in different languages
