reduce revenant hp

--- a/config/BOMD DA Backport/mob_config.cfg
+++ b/config/BOMD DA Backport/mob_config.cfg
@@ -90,6 +90,7 @@ general {
 
     # Change the health of the Nether Abberrant
     D:"Nether Abberrant Health"=20.0
+    D:"Nether Abberrant Health"=15.0
 
     # Change the active mob count the Night Lich can have, try to do it in multiples of 4
     I:"Night Lich Active Mob Count"=12
