prep for BOMD update

--- a/config/rotm.cfg
+++ b/config/rotm.cfg
@@ -121,6 +121,8 @@ general {
         S:"Summon Spawns" <
             minecraft:wither;minecraft:wither_skeleton;75;2-2;15-20;false;true;0;false;true;true;enderskills:shadow;{CustomName:"Withered Minion", HandItems:[{id:"nethercraft:pyridium_sword",Count:1b,tag:{Unbreakable:1}},{}],HandDropChances:[0.0F,0.085F]}
             minecraft:wither;primitivemobs:blazing_juggernaut;25;2-2;15-20;false;true;2;false;true;true;enderskills:shadow;{CustomName:"Juggernaut Guardian",LeftHanded:0,CanPickUpLoot:0b,Health:30,Attributes:[{Name:"generic.maxHealth",Base:30}]}
+            
+            # da:flame_knight;da:incendium_spirit;50;2-2;10-15;false;true;2;false;true;true;enderskills:shadow;{CustomName:"Infernal Warden",LeftHanded:0,CanPickUpLoot:0b,Health:25,Attributes:[{Name:"generic.maxHealth",Base:25}]}
          >
     }
 
