--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -91,6 +91,8 @@ attributes {
 
         eyesinthedarkness:eyes;generic.movementSpeed;1;1.0
         eyesinthedarkness:eyes;generic.followRange;0;40
+
+        # da:incendium_spirit;generic.movementSpeed;1;0.1
     >
 }
 
@@ -864,8 +866,20 @@ targetblocker {
         wither;*
         *;wither
         da:nether_aberant;da:nether_aberant
-        da:nether_aberant;da:flame_knight
-        da:flame_knight;da:nether_aberant
+
+        # da:nether_aberant;da:incendium_spirit
+        # da:incendium_spirit;da:incendium_spirit
+        # da:incendium_spirit;minecraft:zombie_pigman
+        # minecraft:zombie_pigman;da:incendium_spirit
+        # da:incendium_spirit;da:flame_knight
+        # da:flame_knight;da:incendium_spirit
+        # da:incendium_spirit;primitivemobs:blazing_juggernaut
+        # primitivemobs:blazing_juggernaut;da:incendium_spirit
+        # blaze;da:incendium_spirit
+        # da:incendium_spirit;blaze
+        # da:incendium_spirit;da:nether_aberant
+        # da:nether_aberant;da:flame_knight
+        # da:flame_knight;da:nether_aberant
      >
 }
 
