--- a/config/sanity.cfg
+++ b/config/sanity.cfg
@@ -1,157 +1,194 @@
 # Configuration file
 
 general {
-    # The sanity to increase when player gain an advancement.
-    # Min: 0.0
-    # Max: 100.0
-    D:Advancement=0.0
 
-    # The sanity to decrease when player attack an animal.
-    # Min: 0.0
-    # Max: 100.0
-    D:"Attack Animal"=0.0
+    ##########################################################################################################
+    # mechanics
+    #--------------------------------------------------------------------------------------------------------#
+    # Mechanics Options
+    ##########################################################################################################
 
-    # The sanity to decrease when player attack another player.
-    # Min: 0.0
-    # Max: 100.0
-    D:"Attack Player"=0.0
+    mechanics {
+        # The sanity to increase when player gain an advancement.
+        # Min: 0.0
+        # Max: 100.0
+        D:Advancement=0.0
 
-    # The sanity to decrease when player attack a villager.
-    # Min: 0.0
-    # Max: 100.0
-    D:"Attack Villager"=0.0
+        # The sanity to decrease when player attack an animal.
+        # Min: 0.0
+        # Max: 100.0
+        D:"Attack Animal"=0.0
 
-    # Whether to enable the blood overlay.
-    B:"Blood Overlay"=false
+        # The sanity to decrease when player attack another player.
+        # Min: 0.0
+        # Max: 100.0
+        D:"Attack Player"=0.0
 
-    # How many seconds the brain should be visible when sanity changed. (set this to -1 to disable)
-    # Min: -1
-    # Max: 30
-    I:"Brain Flash Time"=3
+        # The sanity to decrease when player attack a villager.
+        # Min: 0.0
+        # Max: 100.0
+        D:"Attack Villager"=0.0
 
-    # Offset on x of the Brain. A positive number means a shift to the right.
-    I:"Brain OffX"=0
+        # The sanity to increase when player bred animals.
+        # Min: 0.0
+        # Max: 100.0
+        D:Bred=0.0
 
-    # Offset on y of the Brain. A positive number means a shift to the top.
-    I:"Brain OffY"=-30
+        # The sanity to decrease when player's air is low.(per 0.5s)
+        # Min: 0.0
+        # Max: 100.0
+        D:Choking=0.0
 
-    # Whether to enable the brain overlay.
-    B:"Brain Overlay"=true
+        # The sanity to decrease when player is in dark. (per 0.5s)
+        # Min: 0.0
+        # Max: 100.0
+        D:Dark=0.0
 
-    # The sanity to increase when player bred animals.
-    # Min: 0.0
-    # Max: 100.0
-    D:Bred=0.0
+        # The list of blocks or liquids which will decrease or increase sanity when player is in it. ('block;value', per 0.5s)
+        S:Environment <
+            
+         >
 
-    # The sanity to decrease when player's air is low.(per 0.5s)
-    # Min: 0.0
-    # Max: 100.0
-    D:Choking=0.0
+        # The sanity to decrease based on the fall distance with the ratio of 1 to this number.
+        # Min: 0.0
+        # Max: 100.0
+        D:Fall=0.0
 
-    # The sanity to decrease when player is in dark. (per 0.5s)
-    # Min: 0.0
-    # Max: 100.0
-    D:Dark=0.0
+        # The list of food and the sanity to decrease or increase when eat it. ('food;value')
+        S:Food <
+            
+         >
 
-    # The list of blocks or liquids which will decrease or increase sanity when player is in it. ('block;value', per 0.5s)
-    S:Environment <
-        
-     >
+        # The sanity to increase when player wear a garland. (per 0.5s)
+        # Min: 0.0
+        # Max: 100.0
+        D:Garland=0.0
 
-    # The sanity to decrease based on the fall distance with the ratio of 1 to this number.
-    # Min: 0.0
-    # Max: 100.0
-    D:Fall=0.0
+        # The sanity to decrease when player's foodLevel is low. (per 0.5s)
+        # Min: 0.0
+        # Max: 100.0
+        D:Hunger=0.0
 
-    # The list of food and the sanity to decrease or increase when eat it. ('food;value')
-    S:Food <
-        
-     >
+        # The sanity to decrease based on the damage with the ratio of 1 to this number.
+        # Min: 0.0
+        # Max: 100.0
+        D:Hurt=0.0
 
-    # The sanity to increase when player wear a garland. (per 0.5s)
-    # Min: 0.0
-    # Max: 100.0
-    D:Garland=0.0
+        # The sanity to increase when player kill a mob.
+        # Min: 0.0
+        # Max: 100.0
+        D:"Kill Mob"=0.0
 
-    # The sanity to decrease when player's foodLevel is low. (per 0.5s)
-    # Min: 0.0
-    # Max: 100.0
-    D:Hunger=0.0
+        # The sanity to decrease when player is struck by lightning.
+        # Min: 0.0
+        # Max: 100.0
+        D:Lightning=0.0
 
-    # The sanity to decrease based on the damage with the ratio of 1 to this number.
-    # Min: 0.0
-    # Max: 100.0
-    D:Hurt=0.0
+        # The sanity to decrease when player loses pets.
+        # Min: 0.0
+        # Max: 100.0
+        D:Lost=0.0
 
-    # The sanity to increase when player kill a mob.
-    # Min: 0.0
-    # Max: 100.0
-    D:"Kill Mob"=0.0
+        # The sanity to decrease when mobs are around player. (per 0.5s, within 8 blocks)
+        # Min: 0.0
+        # Max: 100.0
+        D:Mob=0.0
 
-    # The sanity to decrease when player is struck by lightning.
-    # Min: 0.0
-    # Max: 100.0
-    D:Lightning=0.0
+        # The sanity to increase when player stay with pets. (per 0.5s, within 5 blocks)
+        # Min: 0.0
+        # Max: 100.0
+        D:Pet=0.0
 
-    # The sanity to decrease when player loses pets.
-    # Min: 0.0
-    # Max: 100.0
-    D:Lost=0.0
+        # The sanity to increase when player complete a quest. (only support FTB Quests)
+        # Min: 0.0
+        # Max: 100.0
+        D:Quest=0.0
 
-    # The sanity to decrease when mobs are around player. (per 0.5s, within 8 blocks)
-    # Min: 0.0
-    # Max: 100.0
-    D:Mob=0.0
+        # The sanity to decrease when player get wet by rain. (per 0.5s)
+        # Min: 0.0
+        # Max: 100.0
+        D:Rain=0.0
 
-    # The sanity to increase when player stay with pets. (per 0.5s, within 5 blocks)
-    # Min: 0.0
-    # Max: 100.0
-    D:Pet=0.0
+        # Whether to reset sanity after respawning.
+        B:"Reset Sanity"=false
 
-    # The sanity to increase when player complete a quest. (only support FTB Quests)
-    # Min: 0.0
-    # Max: 100.0
-    D:Quest=0.0
+        # The sanity to increase when player wake up.
+        # Min: 0.0
+        # Max: 100.0
+        D:Sleep=0.0
 
-    # The sanity to decrease when player get wet by rain. (per 0.5s)
-    # Min: 0.0
-    # Max: 100.0
-    D:Rain=0.0
+        # The list of sounds which will play randomly when sanity is low.
+        S:Sounds <
+            entity.creeper.primed
+            entity.tnt.primed
+            entity.skeleton.ambient
+            entity.skeleton.step
+            entity.zombie.ambient
+            entity.zombie.step
+            entity.enderman.ambient
+            entity.hostile.big_fall
+            entity.wolf.growl
+         >
 
-    # Whether to reset sanity after respawning.
-    B:"Reset Sanity"=false
+        # The sanity to decrease when player's thirstLevel is low. (per 0.5s, support ToughAsNails and SimpleDifficulty)
+        # Min: 0.0
+        # Max: 100.0
+        D:Thirst=0.0
 
-    # The sanity to increase when player wake up.
-    # Min: 0.0
-    # Max: 100.0
-    D:Sleep=0.0
+        # The sanity to decrease when player change dimension.
+        # Min: 0.0
+        # Max: 100.0
+        D:Trip=0.0
+    }
 
-    # The list of sounds which will play randomly when sanity is low.
-    S:Sounds <
-        entity.creeper.primed
-        entity.tnt.primed
-        entity.skeleton.ambient
-        entity.skeleton.step
-        entity.zombie.ambient
-        entity.zombie.step
-        entity.enderman.ambient
-        entity.hostile.big_fall
-        block.chest.open
-        block.chest.close
-        block.wooden_door.open
-        block.wooden_trapdoor.open
-        entity.wolf.growl
-     >
+    ##########################################################################################################
+    # overlay
+    #--------------------------------------------------------------------------------------------------------#
+    # Overlay Options
+    ##########################################################################################################
 
-    # The sanity to decrease when player's thirstLevel is low. (per 0.5s, support ToughAsNails and SimpleDifficulty)
-    # Min: 0.0
-    # Max: 100.0
-    D:Thirst=0.0
+    overlay {
+        # Whether to enable the blood overlay.
+        B:"Blood Overlay"=false
 
-    # The sanity to decrease when player change dimension.
-    # Min: 0.0
-    # Max: 100.0
-    D:Trip=0.0
+        # How many seconds the brain should be visible when sanity changed. (set this to -1 to disable)
+        # Min: -1
+        # Max: 30
+        I:"Brain Flash Time"=3
+
+        # Offset on x of the Brain. A positive number means a shift to the right.
+        I:"Brain OffX"=0
+
+        # Offset on y of the Brain. A positive number means a shift to the top.
+        I:"Brain OffY"=0
+
+        # Whether to enable the brain overlay.
+        B:"Brain Overlay"=true
+    }
+
+    ##########################################################################################################
+    # shader
+    #--------------------------------------------------------------------------------------------------------#
+    # Shader Options
+    ##########################################################################################################
+
+    shader {
+        # Enable bits shader when sanity ≤ this number. (set this to -1 to disable)
+        # Min: -1
+        # Max: 100
+        I:Bits=10
+
+        # Enable deconverge shader when sanity ≤ this number. (set this to -1 to disable)
+        # Min: -1
+        # Max: 100
+        I:Deconverge=10
+
+        # Enable notch shader when sanity ≤ this number. (set this to -1 to disable)
+        # Min: -1
+        # Max: 100
+        I:Notch=40
+    }
+
 }
 
 
