disable advancement screenshot for now

--- a/config/Universal Tweaks - Tweaks.cfg
+++ b/config/Universal Tweaks - Tweaks.cfg
@@ -814,7 +814,7 @@ general {
         B:"Accurate Potion Duration"=false
 
         # Silently takes a screenshot every time an advancement is achieved
-        B:"Advancement Screenshot"=true
+        B:"Advancement Screenshot"=false
 
         # Always returns the player to the main menu when quitting the game
         B:"Always Return to Main Menu"=false
