actually fix trace of death souls

--- a/config/sanity.cfg
+++ b/config/sanity.cfg
@@ -128,6 +128,7 @@ general {
             entity.enderman.ambient
             entity.hostile.big_fall
             entity.wolf.growl
+            horror_elements_mod:predator_clicking_noise
          >
 
         # The sanity to decrease when player's thirstLevel is low. (per 0.5s, support ToughAsNails and SimpleDifficulty)
