--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -253,6 +253,7 @@ general {
         B:"Enable Integrated Proxy Patch"=true
         B:"Enable Inventory Tweaks Patch"=true
         B:"Enable JourneyMap Patch"=true
+        B:"Enable KubeJS Patch"=true
         B:"Enable LightAndShadow Patch"=true
         B:"Enable Litematica Patch"=true
         B:"Enable Logistics Pipes Patch"=true
@@ -308,6 +309,7 @@ general {
     "final fields patching list" {
         S:meldexun.nothirium.api.renderer.chunk.ChunkRenderPass=ALL
         S:net.minecraft.client.gui.GuiOptions=field_146441_g|field_146443_h
+        S:net.minecraft.client.renderer.EntityRenderer=field_78504_Q
         S:net.minecraft.entity.EntityTracker=field_72793_b|field_72794_c|field_72795_a
         S:net.minecraft.entity.EntityTrackerEntry=field_73130_b|field_73132_a|field_187262_f|field_73131_c|field_73143_t
         S:net.minecraft.item.ItemBlock=field_150939_a
