--- a/config/fugue.cfg
+++ b/config/fugue.cfg
@@ -214,6 +214,7 @@ general {
         B:"Enable CB Multipart Patch"=true
         B:"Enable Calculator Patch"=true
         B:"Enable Carryon Patch"=true
+        B:"Enable Celeritas Patch"=true
         B:"Enable Censored ASM Patch"=true
         B:"Enable Charset lib Patch"=true
         B:"Enable Code Chicken Lib Patch"=true
@@ -238,6 +239,7 @@ general {
         B:"Enable Essential Patch"=true
         B:"Enable Extra Utilities Patch"=true
         B:"Enable Farseek Patch"=true
+        B:"Enable Funky Locomotion"=true
 
         # This gtceu patch is temporary. An official fix is pending.
         B:"Enable GregTechCE Unofficial Patch"=true
