--- a/config/Universal Tweaks - Mod Integration.cfg
+++ b/config/Universal Tweaks - Mod Integration.cfg
@@ -250,6 +250,10 @@ general {
     mekanism {
         # Fixes various duplication exploits
         B:"Duplication Fixes"=true
+
+        # Fixes a logic error allowing extracting fluids from fluid tanks regardless of requested fluid
+        # Has no effect when playing with Mekanism CEu
+        B:"Fluid Tank Extraction"=true
     }
 
     "mob stages" {
@@ -459,70 +463,6 @@ general {
         B:"Insolator Custom Monoculture"=true
     }
 
-    "tinkers' construct" {
-        # Fixes various duplication exploits
-        B:"Duplication Fixes"=true
-
-        # Excludes gaseous fluids from being transferable via faucets
-        B:"Gaseous Fluids"=false
-
-        # Hides tool/bow materials in the 'Materials and You' book
-        # Syntax: material
-        # Enabling debug logging prints all materials on game launch
-        S:"Material Blacklist" <
-         >
-
-        # Determines the maximum number of possible items to display before not rendering any to prevent substantial lag
-        # 0 to disable rendering items in the smeltery entirely
-        # -1 for the default, which is always rendering items
-        I:"Maximum Items to Render in Smeltery"=-1
-
-        # Suppresses special abilities of long swords and rapiers when shurikens are wielded in the offhand
-        B:"Offhand Shuriken"=true
-
-        # Caches all ore dictionary smelting recipes to speed up game loading
-        B:"Ore Dictionary Cache"=true
-
-        # Fixes server world being leaked to various particles
-        B:"Particle Fixes"=true
-
-        # Despawns unbreakable projectiles faster to improve framerates
-        B:"Projectile Despawning"=true
-
-        # Enables usage of tweaks in below category to customize Tinkers' tools stats
-        B:"Tool Customization"=true
-
-        "tool customization" {
-            # Sets the rate at which a tool's attack damage incrementally decays depending on its damage cutoff
-            # Default value: 0.9
-            # Range: 0.0 - 1.0
-            # Note: A rate of 1.0 means there is no damage decay
-            # Note: The damage curve will cap the maximum value to (tool's damage cutoff)/(1 - decay rate)
-            S:"Attack Damage Decay Rate"=0.9
-
-            # Sets the attack damage cutoff at which diminishing returns start for the cleaver
-            # Default value: 25.0
-            D:"Cleaver Attack Damage Cutoff"=25.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for any Tinkers' tool not listed here
-            # Default value: 15.0
-            D:"General Attack Damage Cutoff"=15.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for the longsword
-            # Default value: 18.0
-            D:"Longsword Attack Damage Cutoff"=18.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for the PlusTiC katana
-            # Default value: 22.0
-            D:"PlusTiC: Katana Attack Damage Cutoff"=22.0
-
-            # Sets the attack damage cutoff at which diminishing returns start for the rapier
-            # Default value: 13.0
-            D:"Rapier Attack Damage Cutoff"=13.0
-        }
-
-    }
-
     "tiny progressions" {
         # Fixes various duplication exploits
         B:"Duplication Fixes"=true
@@ -572,6 +512,9 @@ general {
     }
 
     evilcraft {
+        # Avoid repeatedly running intensive calculations involving spawning a random Vengeance Spirit
+        B:"Vengeance Spirit Random Performance"=true
+
         # Cache the result of Vengeance Spirit checks against the config, which may attempt to build and check against hundreds of Regex Patterns every tick
         B:"Vengeance Spirit Regex Cache"=true
     }
@@ -662,6 +605,49 @@ general {
     "moar tinkers" {
         # Enables Energy Eater/Repair to pull from baubles
         B:"Baubles Compatibility"=true
+    }
+
+    "gaia dimension" {
+        # Safely access a nullable array when checking recipes in the Restructurer
+        B:"Fix Restructurer Crash"=true
+    }
+
+    "tinkers' construct" {
+        # Excludes gaseous fluids from being transferable via faucets
+        B:"Ceramics: Gaseous Fluids"=false
+
+        "tool customization" {
+            # Enables usage of tweaks in below category to customize Tinkers' tools stats
+            B:"[1] Tool Customization"=true
+
+            # Sets the attack damage cutoff at which diminishing returns start for any Tinkers' tool not listed here
+            # Default value: 15.0
+            D:"[2] General Attack Damage Cutoff"=15.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the cleaver
+            # Default value: 25.0
+            D:"[3] Cleaver Attack Damage Cutoff"=25.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the longsword
+            # Default value: 18.0
+            D:"[4] Longsword Attack Damage Cutoff"=18.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the rapier
+            # Default value: 13.0
+            D:"[5] Rapier Attack Damage Cutoff"=13.0
+
+            # Sets the attack damage cutoff at which diminishing returns start for the PlusTiC katana
+            # Default value: 22.0
+            D:"[6] PlusTiC: Katana Attack Damage Cutoff"=22.0
+
+            # Sets the rate at which a tool's attack damage incrementally decays depending on its damage cutoff
+            # Default value: 0.9
+            # Range: 0.0 - 1.0
+            # Note: A rate of 1.0 means there is no damage decay
+            # Note: The damage curve will cap the maximum value to (tool's damage cutoff)/(1 - decay rate)
+            S:"[7] Attack Damage Decay Rate"=0.9
+        }
+
     }
 
 }
