--- a/config/Universal Tweaks - Tweaks.cfg
+++ b/config/Universal Tweaks - Tweaks.cfg
@@ -15,9 +15,6 @@ general {
         # Determines how tall cacti can grow
         I:"Cactus Size"=3
 
-        # Allows placing End Crystals without requiring Obsidian or Bedrock below
-        B:"End Crystal Placing"=false
-
         # Determines the numerator of the block drop formula on explosions
         # Formula: chance ÷ explosionSize
         D:"Explosion Block Drop Chance"=1.0
@@ -196,6 +193,23 @@ general {
         anvil {
             # Sets the experience level cap for anvil recipes
             I:"Anvil XP Level Cap"=40
+
+            # Allows repairing damaged anvils by right-clicking them with a repair item
+            B:"Repairable Anvil Toggle"=false
+
+            ##########################################################################################################
+            # repairable anvil items
+            #--------------------------------------------------------------------------------------------------------#
+            # List of items which can be used to repair damaged anvils and their amount
+            # Syntax: modid:block, amount
+            # Syntax: oredict, amount
+            ##########################################################################################################
+
+            "repairable anvil items" {
+                I:blockIron=1
+                I:"minecraft:iron_ingot"=9
+            }
+
         }
 
         piston {
@@ -206,6 +220,24 @@ general {
             # Syntax: modid:block
             S:"[2] Piston Block Blacklist" <
              >
+        }
+
+        "end crystal placement" {
+            # Allows placing end crystals on more blocks than obsidian or bedrock below
+            B:"[1] End Crystal Placement Toggle"=false
+
+            # List of blocks concerning placement of end crystals
+            # Behavior depends on the list mode
+            # Syntax: modid:block
+            S:"[2] Block List" <
+             >
+
+            # Blacklist Mode: Blocks that don't allow placing of end crystals, others do
+            # Whitelist Mode: Blocks that allow placing of end crystals, others don't
+            # Valid values:
+            # WHITELIST
+            # BLACKLIST
+            S:"[3] List Mode"=BLACKLIST
         }
 
     }
@@ -308,6 +340,13 @@ general {
 
         # When viewing in third person, don't stop the camera on non-solid blocks
         B:"Third Person Ignores Non-solid Blocks"=false
+
+        # Controls villager professions in specified biomes
+        # Syntax: whitelist/blacklist;modid:biome=modid:profession,modid:profession,...
+        # Example 1: whitelist;minecraft:plains=minecraft:librarian,minecraft:priest
+        # Example 2: blacklist;minecraft:desert=minecraft:farmer
+        S:"Villager Profession Biome Restriction" <
+         >
 
         # Allows creating Iron Golems with non-air blocks in the bottom corners of the structure
         B:"Weaken Golem Structure Requirements"=false
@@ -813,9 +852,6 @@ general {
         # Always displays the actual potion duration instead of `**:**`
         B:"Accurate Potion Duration"=false
 
-        # Silently takes a screenshot every time an advancement is achieved
-        B:"Advancement Screenshot"=false
-
         # Always returns the player to the main menu when quitting the game
         B:"Always Return to Main Menu"=false
 
@@ -1235,6 +1271,25 @@ general {
             # The login timeout in seconds. (Vanilla default: 600 ticks, or 30 secs)
             # Only used on the server.
             I:"[3] Login Timeout"=90
+        }
+
+        "advancement screenshot" {
+            # Silently takes a screenshot every time an advancement is achieved
+            B:"[1] Advancement Screenshot Toggle"=false
+
+            # Syntax: modid:advancement
+            S:"[2] Advancement List" <
+             >
+
+            # Blacklist Mode: Advancements which are not captured, others are
+            # Whitelist Mode: Advancements which are captured, others are not
+            # Valid values:
+            # WHITELIST
+            # BLACKLIST
+            S:"[3] List Mode"=BLACKLIST
+
+            # Cooldown in ticks after each capture to prevent lag through screenshot spam
+            I:"[4] Screenshot Cooldown"=20
         }
 
     }
