--- a/config/ZenUtils.cfg
+++ b/config/ZenUtils.cfg
@@ -1,8 +1,14 @@
 # Configuration file
 
 general {
+    # Enable mixinzs. Default: false
     B:enableMixin=false
+
+    # Enable RandomTickEvent. It patches hotspot random tick code, which may produce performance loss. Do not enable it if you don't need it. Default: false
     B:enableRandomTickEvent=false
+
+    # Enable fast script loading. Note: If enabled, ONLY PREPROCESSORS AT SCRIPT HEADER ARE EFFECTIVE. (except mixin scripts) Default: false
+    B:fastScriptLoading=false
 }
 
 
