update alfheim, fugue, vintagefix

--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -37,6 +37,7 @@ ui_background {
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
         B:mirror.normalasm.common.crashes.GuiInitErrorScreen=true
         B:net.minecraft.client.gui.GuiScreenOptionsSounds=true
+        B:net.optifine.gui.GuiOtherSettingsOF=true
         B:net.optifine.gui.GuiPerformanceSettingsOF=true
         B:net.optifine.shaders.gui.GuiShaders=true
         B:us.getfluxed.controlsearch.client.gui.GuiNewControls=true
