--- a/config/forge_early.cfg
+++ b/config/forge_early.cfg
@@ -3,10 +3,15 @@
 general {
     # OSX-only - identifier used to save and restore the window position and size
     S:COCOA_FRAME_NAME=minecraft
+
+    # OSX-only - Specifies whether to use full resolution framebuffers on Retina displays
+    B:COCOA_RETINA_FRAMEBUFFER=false
     S:CONFIG_ANY_TIME_VERSION=3.0
+    B:CUSTOM_BUILT_IN_MOD_VERSION=false
     B:DECORATED=true
 
-    # Enable this when the game has problem running on Wayland
+    # Enable this when you want to run the game on Wayland (WARNING: GLFW's wayland support is buggy)
+    B:FORCE_WAYLAND=false
     B:FORCE_X11=false
 
     # Allows AltGr use in Ctrl+key special key combinations (disables text character input handling when AltGr is pressed)
@@ -31,7 +36,7 @@ general {
         advancedshader.core.Core
         net.shadowfacts.forgelin.preloader.ForgelinPlugin
      >
-    S:MIXIN_BOOTER_VERSION=10.5
+    S:MIXIN_BOOTER_VERSION=10.6
 
     # Enable GL_KHR_no_error to use faster driver code, but which can cause memory corruption in case of OpenGL errors
     B:OPENGL_CONTEXT_NO_ERROR=false
